# toxfox-ocr

./: .gitattributes  .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  run_api.sh  tox.ini
config/: default_config.yml  pipeline_config.yml
data/ground_truth/: 0083800047833.yaml  0085805190880.yaml  0768614212331.yaml  0842101102074.yaml  11112140153911.yaml  3253581766538.yaml  3253581780039.yaml  3367729117264.yaml  3499320013727.yaml  3499320014854.yaml  3574661563312.yaml  3574661588353.yaml  3600522020837.yaml  3600523193226.yaml  3600542169950.yaml  3616301640943.yaml  4005800162329.yaml  4005800162350.yaml  4005900546234.yaml  4008491107792.yaml  4008666704702.yaml  4008666705013.yaml  4015100718799.yaml  4015100814811.yaml  4021457652471.yaml  4025089085034.yaml  4030651052031.yaml  4051424570002.yaml  4056489764137.yaml  4058172927928.yaml  4059729444530.yaml  4062300419414.yaml  4062300419445.yaml  4063528071484.yaml  4064666328195.yaml  4066447086508.yaml  4066447241693.yaml  4066447341881.yaml  4066447467451.yaml  4066447593754.yaml  (+19 more)
data/inci/: SchadstoffeToxFox_09092024.xlsx  inci_nano.xlsx  inci_simple.json  pollutant_mapping.yml  schadstoffliste.json
frontend/: dashboard.py  requirements.txt
notebooks/: 00_ground_trouth_exploration.ipynb  01_download_data.ipynb
tests/: test_main.py
zug_toxfox/: __init__.py  __main__.py  cli.py  inci_processor.py  pipeline.py  utils.py
zug_toxfox/modules/: evaluation.py  ocr.py  postprocessing.py  preprocessing.py
